<resources>
    <string name="app_name">Journal</string>
    <string name="title_history">History</string>
    <string name="title_todayjournal">Today</string>
    <string name="title_statistics">Statistics</string>
    <string name="food">Food</string>
    <string name="good">Good</string>
    <string name="medium">Medium</string>
    <string name="bad">Bad</string>
    <string name="work">Work</string>
    <string name="exercise">Exercise</string>
    <string name="overallhumor">Overall Humor</string>
    <string name="comments">Comments</string>
    <string name="save">Save</string>
</resources>