<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_todayjournal">

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.journal.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_todayjournal"
        android:name="com.example.journal.ui.todayjournal.TodayJournalFragment"
        android:label="@string/title_todayjournal"
        tools:layout="@layout/fragment_todayjournal" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.journal.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>