<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    tools:context=".ui.todayjournal.TodayJournalFragment">

    <!-- TODO: Think of a way to reuse the section layout -->

    <TextView
        android:id="@+id/title_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/checkBox_food_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_food_medium"
        app:layout_constraintTop_toBottomOf="@id/title_food" />

    <CheckBox
        android:id="@+id/checkBox_food_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        app:layout_constraintStart_toEndOf="@+id/checkBox_food_good"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_food_bad"
        app:layout_constraintTop_toBottomOf="@id/title_food" />

    <CheckBox
        android:id="@+id/checkBox_food_bad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bad"
        app:layout_constraintStart_toEndOf="@+id/checkBox_food_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_food" />

    <TextView
        android:id="@+id/title_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_food_good" />


    <CheckBox
        android:id="@+id/checkBox_work_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_work_medium"
        app:layout_constraintTop_toBottomOf="@id/title_work" />

    <CheckBox
        android:id="@+id/checkBox_work_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        app:layout_constraintStart_toEndOf="@+id/checkBox_work_good"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_work_bad"
        app:layout_constraintTop_toBottomOf="@id/title_work" />

    <CheckBox
        android:id="@+id/checkBox_work_bad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bad"
        app:layout_constraintStart_toEndOf="@+id/checkBox_work_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_work" />

    <TextView
        android:id="@+id/title_exercice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_work_good" />


    <CheckBox
        android:id="@+id/checkBox_exercice_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_exercice_medium"
        app:layout_constraintTop_toBottomOf="@id/title_exercice" />

    <CheckBox
        android:id="@+id/checkBox_exercice_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        app:layout_constraintStart_toEndOf="@+id/checkBox_exercice_good"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_exercice_bad"
        app:layout_constraintTop_toBottomOf="@id/title_exercice" />

    <CheckBox
        android:id="@+id/checkBox_exercice_bad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bad"
        app:layout_constraintStart_toEndOf="@+id/checkBox_exercice_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_exercice" />

    <TextView
        android:id="@+id/title_overallhumor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/overallhumor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_exercice_good" />


    <CheckBox
        android:id="@+id/checkBox_overallhumor_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_overallhumor_medium"
        app:layout_constraintTop_toBottomOf="@id/title_overallhumor" />

    <CheckBox
        android:id="@+id/checkBox_overallhumor_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        app:layout_constraintStart_toEndOf="@+id/checkBox_overallhumor_good"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_overallhumor_bad"
        app:layout_constraintTop_toBottomOf="@id/title_overallhumor" />

    <CheckBox
        android:id="@+id/checkBox_overallhumor_bad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bad"
        app:layout_constraintStart_toEndOf="@+id/checkBox_overallhumor_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_overallhumor" />

    <EditText
        android:id="@+id/editText_comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:layout_margin="8dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/comments"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_overallhumor_good" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_comments"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>